--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "start-testing-cloudflare",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Start Testing is a lightweight Typescript Testing Library with 0 dependencies and a minimal yet flexible API to get you from concept to validation as fast as possible",
   "keywords": [
     "typescript",
@@ -21,7 +21,7 @@
     "url": "https://github.com/connormckelvey/start-testing-cloudflare/issues"
   },
   "homepage": "https://github.com/connormckelvey/start-testing-cloudflare#readme",
-  "main": "./dist/index.js",
+  "main": "./dist/index.mjs",
   "files": [
     "dist/**/*",
     "README.md",
