--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "start-testing-cloudflare",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Start Testing is a lightweight Typescript Testing Library with 0 dependencies and a minimal yet flexible API to get you from concept to validation as fast as possible",
   "keywords": [
     "typescript",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/connormckelvey/start-testing-cloudflare#readme",
   "main": "./dist/index.mjs",
+  "types": "./lib/index.d.ts",
   "files": [
     "dist/**/*",
     "README.md",
