--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,28 @@
   "compilerOptions": {
     "declaration": true,
     "strictNullChecks": true,
-    "noImplicitAny": true, 
+    "noImplicitAny": true,
     "module": "ESNext",
     "target": "ESNext",
-    "outDir": "dist",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
-    "lib": ["ESNext", "dom"],
+    "lib": [
+      "ESNext",
+      "dom"
+    ],
     "types": [
       "@types/node",
       "@cloudflare/workers-types"
     ]
   },
-  "include": ["scripts", "src", "test"],
-  "exclude": ["node_modules", "lib"]
+  "include": [
+    "scripts",
+    "src",
+    "test"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib"
+  ]
 }
