--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "start-testing-cloudflare",
-  "version": "1.0.4",
+  "version": "1.0.8",
   "description": "Start Testing is a lightweight Typescript Testing Library with 0 dependencies and a minimal yet flexible API to get you from concept to validation as fast as possible",
   "keywords": [
     "typescript",
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/connormckelvey/start-testing-cloudflare#readme",
   "main": "./dist/index.js",
-  "types": "./lib/index.d.ts",
+  "##exports": {
+    ".": "./dist/index.js",
+    "./cloudflare": "./dist/cloudflare/index.js",
+    "./local": "./dist/local/index.js"
+  },
+  "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*",
     "README.md",
