--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,6 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "declaration": true,
-        // "emitDeclarationOnly": true,
         "outDir": "dist",
         "types": [
             "@types/node",
@@ -13,7 +12,7 @@
     ],
     "exclude": [
         "node_modules",
-        "lib",
+        "dist",
         "scripts",
         "test",
         "**/*.test.*"
