--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,18 @@
-# name: Test
+name: Test
 
-# on:
-#   push
+on:
+  push
 
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-node@v2
-#         with:
-#           node-version: 16
-#       - run: npm ci
-#       - run: npm test
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - run: npm i @cloudflare/wrangler -g
+      - run: npm ci
+      - run: npm run build
+      - run: cd example && npm ci
+      - run: npm test
