--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   },
   "homepage": "https://github.com/connormckelvey/start-testing-cloudflare#readme",
   "main": "./dist/index.js",
-  "##exports": {
-    ".": "./dist/index.js",
-    "./cloudflare": "./dist/cloudflare/index.js",
-    "./local": "./dist/local/index.js"
-  },
+  "// TODO:": [
+    "waiting on TS support for exports",
+    "https://github.com/microsoft/TypeScript/issues/33079",
+    {
+      "exports": {
+        ".": "./dist/index.js",
+        "./cloudflare": "./dist/cloudflare/index.js",
+        "./local": "./dist/local/index.js"
+      }
+    }
+  ],
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*",
@@ -38,18 +44,19 @@
     "test": "node --loader ts-node/esm ./scripts/runTests.ts",
     "clean": "rm -rf dist",
     "compile": "tsc -p tsconfig.build.json",
-    "#compile": "tsc -p tsconfig.build.json && node ./scripts/build.js",
     "build": "npm run clean && npm run compile"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.4.0",
     "@types/node": "^17.0.21",
+    "chai": "^4.3.6",
     "esbuild": "^0.14.23",
     "glob": "^7.2.0",
+    "tree-kill": "^1.2.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^3.4.0",
     "node-fetch": "^3.2.0",
     "start-testing": "^1.0.4"
   }
