--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "declaration": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "module": "ESNext",
-    "target": "ESNext",
+    "module": "ES2020",
+    "target": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
     "lib": [
-      "ESNext",
+      "ES2020"
     ],
     "types": [
       "@cloudflare/workers-types",
